# kitt4sme.viqe

./: Dockerfile  README.md  pyproject.toml
tests/e2e/: conftest.py  docker-compose.yml  test_inspection.py
tests/integration/: conftest.py  docker-compose.yml  test_inspection.py
tests/sim/: dazzler-config.yaml  docker-compose.yml  report-batch-example.json  report_batch.py  runner.py
tests/unit/: test_ngsy.py  test_version.py
tests/util/: fiware.py  viqe_client.py
viqe/: __init__.py  ai.py  config.py  enteater.py  log.py  main.py  ngsy.py
